tests/fails/except_all.stderr
error: Cannot add more exceptions
 --> $DIR/except_all.rs:4:82
  |
4 |     let wrong = except!(A, R, N, D, C, E, Q, G, H, I, L, K, M, F, P, S, T, W, Y, V);
  |                                                                                  ^
